@@ -23,7 +23,6 @@ import static org.apache.solr.common.params.CommonParams.NAME;
 
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -53,7 +52,7 @@ public class DeleteCollectionCmd implements CollApiCmds.CollectionApiCommand {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   private static final Set<String> okayExceptions =
-      Collections.singleton(NonExistentCoreException.class.getName());
+      Set.of(NonExistentCoreException.class.getName());
 
   private final CollectionCommandContext ccc;
 
