@@ -18,7 +18,6 @@ package org.apache.solr.schema;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.lucene.document.SortedDocValuesField;
@@ -65,7 +64,7 @@ public class StrField extends PrimitiveFieldType {
 
       fval = docval;
     }
-    return Collections.singletonList(fval);
+    return List.of(fval);
   }
 
   public static BytesRef getBytesRef(Object value) {
