@@ -55,6 +55,7 @@ import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.request.SolrQueryRequestBase;
 import org.apache.solr.response.SolrQueryResponse;
 import org.apache.solr.schema.SchemaField;
+import org.apache.solr.util.ErrorLogMuter;
 import org.apache.solr.util.hll.HLL;
 import org.junit.BeforeClass;
 
@@ -1517,8 +1518,7 @@ public class StatsComponentTest extends SolrTestCaseJ4 {
           perShardXpaths.addAll(expectedDep.perShardXpaths);
         }
       }
-      ALL.put(
-          stat, new ExpectedStat(stat, input, perShardXpaths, Collections.singletonList(xpath)));
+      ALL.put(stat, new ExpectedStat(stat, input, perShardXpaths, List.of(xpath)));
     }
 
     public static void create(
@@ -1608,10 +1608,7 @@ public class StatsComponentTest extends SolrTestCaseJ4 {
     ExpectedStat.createSimple(Stat.stddev, "true", "double", String.valueOf(stddev));
     final String distinctValsXpath = "count(" + kpre + "arr[@name='distinctValues']/*)=10";
     ExpectedStat.create(
-        Stat.distinctValues,
-        "true",
-        Collections.singletonList(distinctValsXpath),
-        Collections.singletonList(distinctValsXpath));
+        Stat.distinctValues, "true", List.of(distinctValsXpath), List.of(distinctValsXpath));
     ExpectedStat.createSimple(Stat.countDistinct, "true", "long", "10");
     final String percentileShardXpath =
         kpre
@@ -1624,7 +1621,7 @@ public class StatsComponentTest extends SolrTestCaseJ4 {
     ExpectedStat.create(
         Stat.percentiles,
         "'90, 99'",
-        Collections.singletonList(percentileShardXpath),
+        List.of(percentileShardXpath),
         Arrays.asList(
             "count(" + kpre + "lst[@name='percentiles']/*)=2",
             kpre + "lst[@name='percentiles']/double[@name='90.0'][.=" + p90 + "]",
@@ -1636,10 +1633,7 @@ public class StatsComponentTest extends SolrTestCaseJ4 {
             + "']";
     final String cardinalityXpath = kpre + "long[@name='cardinality'][.='10']";
     ExpectedStat.create(
-        Stat.cardinality,
-        "true",
-        Collections.singletonList(cardinalityShardXpath),
-        Collections.singletonList(cardinalityXpath));
+        Stat.cardinality, "true", List.of(cardinalityShardXpath), List.of(cardinalityXpath));
 
     // canary in the coal mine
     assertEquals(
@@ -2127,116 +2121,119 @@ public class StatsComponentTest extends SolrTestCaseJ4 {
    * @see #testCardinality
    * @see #testHllOptions
    */
+  @SuppressWarnings("try")
   public void testHllOptionsErrors() {
     String[] baseParams = new String[] {"q", "*:*", "stats", "true", "indent", "true", "rows", "0"};
     SolrCore core = h.getCore();
     SchemaField foo_s = core.getLatestSchema().getField("foo_s");
     SchemaField foo_i = core.getLatestSchema().getField("foo_i");
 
-    ignoreException("hllPreHashed");
-    for (SchemaField field : new SchemaField[] {foo_s, foo_i}) {
-      // whitebox - field
+    try (ErrorLogMuter hllPreHashed = ErrorLogMuter.regex("hllPreHashed");
+        ErrorLogMuter accuracy = ErrorLogMuter.regex("accuracy");
+        ErrorLogMuter hllLog2m = ErrorLogMuter.regex("hllLog2m must be");
+        ErrorLogMuter hllRegwidth = ErrorLogMuter.regex("hllRegwidth must be")) {
+      for (SchemaField field : new SchemaField[] {foo_s, foo_i}) {
+        // whitebox - field
+        SolrException ex =
+            expectThrows(
+                SolrException.class,
+                () -> {
+                  HllOptions.parseHllOptions(
+                      params("cardinality", "true", "hllPreHashed", "true"), field);
+                });
+        assertTrue(
+            "MSG: " + ex.getMessage(),
+            ex.getMessage().contains("hllPreHashed is only supported with Long"));
+        // blackbox - field
+        assertQEx(
+            "hllPreHashed " + field.getName(),
+            "hllPreHashed is only supported with Long",
+            req(
+                params("stats.field", "{!cardinality=true hllPreHashed=true}" + field.getName()),
+                baseParams),
+            ErrorCode.BAD_REQUEST);
+      }
+
+      // whitebox - function
       SolrException ex =
           expectThrows(
               SolrException.class,
               () -> {
                 HllOptions.parseHllOptions(
-                    params("cardinality", "true", "hllPreHashed", "true"), field);
+                    params("cardinality", "true", "hllPreHashed", "true"), null);
               });
       assertTrue(
           "MSG: " + ex.getMessage(),
           ex.getMessage().contains("hllPreHashed is only supported with Long"));
-      // blackbox - field
+
+      // blackbox - function
       assertQEx(
-          "hllPreHashed " + field.getName(),
+          "hllPreHashed function",
           "hllPreHashed is only supported with Long",
           req(
-              params("stats.field", "{!cardinality=true hllPreHashed=true}" + field.getName()),
+              params("stats.field", "{!func cardinality=true hllPreHashed=true}sum(foo_i,foo_l)"),
               baseParams),
           ErrorCode.BAD_REQUEST);
-    }
 
-    // whitebox - function
-    SolrException ex =
-        expectThrows(
-            SolrException.class,
-            () -> {
-              HllOptions.parseHllOptions(
-                  params("cardinality", "true", "hllPreHashed", "true"), null);
-            });
-    assertTrue(
-        "MSG: " + ex.getMessage(),
-        ex.getMessage().contains("hllPreHashed is only supported with Long"));
+      for (String invalid : new String[] {"-1", "1.1", "100"}) {
+        // whitebox
+        ex =
+            expectThrows(
+                SolrException.class,
+                () -> {
+                  HllOptions.parseHllOptions(params("cardinality", invalid), foo_s);
+                });
+        assertTrue("MSG: " + ex.getMessage(), ex.getMessage().contains("number between 0 and 1"));
+        // blackbox
+        assertQEx(
+            "cardinality=" + invalid,
+            "number between 0 and 1",
+            req(params("stats.field", "{!cardinality=" + invalid + "}foo_s"), baseParams),
+            ErrorCode.BAD_REQUEST);
+      }
 
-    // blackbox - function
-    assertQEx(
-        "hllPreHashed function",
-        "hllPreHashed is only supported with Long",
-        req(
-            params("stats.field", "{!func cardinality=true hllPreHashed=true}sum(foo_i,foo_l)"),
-            baseParams),
-        ErrorCode.BAD_REQUEST);
+      for (int invalid : new int[] {HLL.MINIMUM_LOG2M_PARAM - 1, HLL.MAXIMUM_LOG2M_PARAM + 11}) {
+        // whitebox
+        ex =
+            expectThrows(
+                SolrException.class,
+                () -> {
+                  HllOptions.parseHllOptions(
+                      params("cardinality", "true", "hllLog2m", "" + invalid), foo_s);
+                });
+        assertTrue("MSG: " + ex.getMessage(), ex.getMessage().contains("hllLog2m must be"));
 
-    ignoreException("accuracy");
-    for (String invalid : new String[] {"-1", "1.1", "100"}) {
-      // whitebox
-      ex =
-          expectThrows(
-              SolrException.class,
-              () -> {
-                HllOptions.parseHllOptions(params("cardinality", invalid), foo_s);
-              });
-      assertTrue("MSG: " + ex.getMessage(), ex.getMessage().contains("number between 0 and 1"));
-      // blackbox
-      assertQEx(
-          "cardinality=" + invalid,
-          "number between 0 and 1",
-          req(params("stats.field", "{!cardinality=" + invalid + "}foo_s"), baseParams),
-          ErrorCode.BAD_REQUEST);
-    }
+        // blackbox
+        assertQEx(
+            "hllLog2m=" + invalid,
+            "hllLog2m must be",
+            req(
+                params("stats.field", "{!cardinality=true hllLog2m=" + invalid + "}foo_s"),
+                baseParams),
+            ErrorCode.BAD_REQUEST);
+      }
 
-    ignoreException("hllLog2m must be");
-    for (int invalid : new int[] {HLL.MINIMUM_LOG2M_PARAM - 1, HLL.MAXIMUM_LOG2M_PARAM + 11}) {
-      // whitebox
-      ex =
-          expectThrows(
-              SolrException.class,
-              () -> {
-                HllOptions.parseHllOptions(
-                    params("cardinality", "true", "hllLog2m", "" + invalid), foo_s);
-              });
-      assertTrue("MSG: " + ex.getMessage(), ex.getMessage().contains("hllLog2m must be"));
+      for (int invalid :
+          new int[] {HLL.MINIMUM_REGWIDTH_PARAM - 1, HLL.MAXIMUM_REGWIDTH_PARAM + 1}) {
+        // whitebox
+        ex =
+            expectThrows(
+                SolrException.class,
+                () -> {
+                  HllOptions.parseHllOptions(
+                      params("cardinality", "true", "hllRegwidth", "" + invalid), foo_s);
+                });
+        assertTrue("MSG: " + ex.getMessage(), ex.getMessage().contains("hllRegwidth must be"));
 
-      // blackbox
-      assertQEx(
-          "hllLog2m=" + invalid,
-          "hllLog2m must be",
-          req(
-              params("stats.field", "{!cardinality=true hllLog2m=" + invalid + "}foo_s"),
-              baseParams),
-          ErrorCode.BAD_REQUEST);
-    }
-
-    ignoreException("hllRegwidth must be");
-    for (int invalid : new int[] {HLL.MINIMUM_REGWIDTH_PARAM - 1, HLL.MAXIMUM_REGWIDTH_PARAM + 1}) {
-      // whitebox
-      ex =
-          expectThrows(
-              SolrException.class,
-              () -> {
-                HllOptions.parseHllOptions(
-                    params("cardinality", "true", "hllRegwidth", "" + invalid), foo_s);
-              });
-      assertTrue("MSG: " + ex.getMessage(), ex.getMessage().contains("hllRegwidth must be"));
-
-      // blackbox
-      assertQEx(
-          "hllRegwidth=" + invalid,
-          "hllRegwidth must be",
-          req(
-              params("stats.field", "{!cardinality=true hllRegwidth=" + invalid + "}foo_s"),
-              baseParams),
-          ErrorCode.BAD_REQUEST);
+        // blackbox
+        assertQEx(
+            "hllRegwidth=" + invalid,
+            "hllRegwidth must be",
+            req(
+                params("stats.field", "{!cardinality=true hllRegwidth=" + invalid + "}foo_s"),
+                baseParams),
+            ErrorCode.BAD_REQUEST);
+      }
     }
   }
 
