@@ -21,11 +21,11 @@ import static org.apache.solr.metrics.SolrMetricProducer.CATEGORY_ATTR;
 import static org.apache.solr.metrics.SolrMetricProducer.NAME_ATTR;
 
 import io.opentelemetry.api.common.Attributes;
+import io.opentelemetry.sdk.metrics.export.MetricExporter;
 import io.prometheus.metrics.model.snapshots.Labels;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import org.apache.lucene.tests.util.TestUtil;
@@ -96,7 +96,8 @@ public class TestThinCache extends SolrTestCaseJ4 {
     lrf = h.getRequestFactory("/select", 0, 20);
   }
 
-  SolrMetricManager metricManager = new SolrMetricManager(null);
+  MetricExporter me = null;
+  SolrMetricManager metricManager = new SolrMetricManager(me);
   String registry = TestUtil.randomSimpleString(random(), 2, 10);
 
   @Test
@@ -131,8 +132,7 @@ public class TestThinCache extends SolrTestCaseJ4 {
 
     NoOpRegenerator regenerator = new NoOpRegenerator();
     backing.init(params, null, null);
-    Object initObj =
-        lfuCache.init(Collections.singletonMap("autowarmCount", "25"), null, regenerator);
+    Object initObj = lfuCache.init(Map.of("autowarmCount", "25"), null, regenerator);
     lfuCache.setState(SolrCache.State.LIVE);
     for (int i = 0; i < 101; i++) {
       lfuCache.put(i + 1, Integer.toString(i + 1));
@@ -151,7 +151,7 @@ public class TestThinCache extends SolrTestCaseJ4 {
     assertNull(lfuCache.get(1)); // first item put in should be the first out
 
     // Test autowarming
-    newLFUCache.init(Collections.singletonMap("autowarmCount", "25"), initObj, regenerator);
+    newLFUCache.init(Map.of("autowarmCount", "25"), initObj, regenerator);
     newLFUCache.warm(null, lfuCache);
     newLFUCache.setState(SolrCache.State.LIVE);
 
