@@ -16,12 +16,10 @@
  */
 package org.apache.solr.security;
 
-import static java.util.Collections.singletonMap;
-
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.util.CommandOperation;
@@ -35,10 +33,10 @@ public class TestSha256AuthenticationProvider extends SolrTestCaseJ4 {
     String pwd = "Friendly";
     String user = "marcus";
     Map<String, Object> latestConf = createConfigMap(user, pwd);
-    Map<String, Object> params = singletonMap(user, pwd);
+    Map<String, Object> params = Map.of(user, pwd);
     Map<String, Object> result =
         zkAuthenticationProvider.edit(
-            latestConf, Collections.singletonList(new CommandOperation("set-user", params)));
+            latestConf, List.of(new CommandOperation("set-user", params)));
     zkAuthenticationProvider = new Sha256AuthenticationProvider();
     zkAuthenticationProvider.init(result);
 
@@ -54,13 +52,13 @@ public class TestSha256AuthenticationProvider extends SolrTestCaseJ4 {
       Map<String, Object> latestConf = createConfigMap("solr", "SolrRocks");
 
       CommandOperation blockUnknown =
-          new CommandOperation("set-property", singletonMap("blockUnknown", true));
-      basicAuthPlugin.edit(latestConf, Collections.singletonList(blockUnknown));
+          new CommandOperation("set-property", Map.of("blockUnknown", true));
+      basicAuthPlugin.edit(latestConf, List.of(blockUnknown));
       assertEquals(Boolean.TRUE, latestConf.get("blockUnknown"));
       basicAuthPlugin.init(latestConf);
       assertTrue(basicAuthPlugin.getBlockUnknown());
-      blockUnknown = new CommandOperation("set-property", singletonMap("blockUnknown", false));
-      basicAuthPlugin.edit(latestConf, Collections.singletonList(blockUnknown));
+      blockUnknown = new CommandOperation("set-property", Map.of("blockUnknown", false));
+      basicAuthPlugin.edit(latestConf, List.of(blockUnknown));
       assertEquals(Boolean.FALSE, latestConf.get("blockUnknown"));
       basicAuthPlugin.init(latestConf);
       assertFalse(basicAuthPlugin.getBlockUnknown());
@@ -104,6 +102,64 @@ public class TestSha256AuthenticationProvider extends SolrTestCaseJ4 {
               .getErrors()
               .contains(Sha256AuthenticationProvider.CANNOT_DELETE_LAST_USER_ERROR));
     }
+  }
+
+  public void testAuthenticateRejectsUsernameEqualPassword() {
+    // Simulate a credential store that has the username's own hash as the password
+    // (e.g. set up before this policy was in effect) and verify authenticate() still rejects it.
+    String user = "alice";
+    String hashedValue = Sha256AuthenticationProvider.getSaltedHashedValue(user);
+    Map<String, Object> config = new HashMap<>();
+    Map<String, String> credentials = new HashMap<>();
+    credentials.put(user, hashedValue);
+    config.put("credentials", credentials);
+
+    Sha256AuthenticationProvider provider = new Sha256AuthenticationProvider();
+    provider.init(config);
+    assertFalse(
+        "authenticate() must reject username==password even when hash matches",
+        provider.authenticate(user, user));
+  }
+
+  public void testAllowUserAsPasswordSyspropReenablesLogin() {
+    String user = "alice";
+    String hashedValue = Sha256AuthenticationProvider.getSaltedHashedValue(user);
+    Map<String, Object> config = new HashMap<>();
+    Map<String, String> credentials = new HashMap<>();
+    credentials.put(user, hashedValue);
+    config.put("credentials", credentials);
+
+    Sha256AuthenticationProvider provider = new Sha256AuthenticationProvider();
+    provider.init(config);
+
+    System.setProperty(Sha256AuthenticationProvider.ALLOW_USER_AS_PASSWORD_PROP, "true");
+    try {
+      assertTrue(
+          "authenticate() must allow username==password when escape-hatch sysprop is true",
+          provider.authenticate(user, user));
+      assertFalse(
+          "authenticate() must still reject a genuinely wrong password",
+          provider.authenticate(user, "WrongPassword"));
+
+      // The escape hatch also relaxes set-user, so username==password is accepted there.
+      Map<String, Object> latestConf = createConfigMap("ignore", "me");
+      CommandOperation cmd = new CommandOperation("set-user", Map.of(user, user));
+      provider.edit(latestConf, List.of(cmd));
+      assertFalse(
+          "set-user should allow username==password when escape hatch is enabled", cmd.hasError());
+    } finally {
+      System.clearProperty(Sha256AuthenticationProvider.ALLOW_USER_AS_PASSWORD_PROP);
+    }
+  }
+
+  public void testSetUserRejectsUsernameEqualPassword() {
+    Sha256AuthenticationProvider provider = new Sha256AuthenticationProvider();
+    provider.init(createConfigMap("ignore", "me"));
+    Map<String, Object> latestConf = createConfigMap("ignore", "me");
+    String user = "bob";
+    CommandOperation cmd = new CommandOperation("set-user", Map.of(user, user));
+    provider.edit(latestConf, List.of(cmd));
+    assertTrue("set-user should report an error when username==password", cmd.hasError());
   }
 
   private Map<String, Object> createConfigMap(String user, String pw) {
