@@ -19,7 +19,7 @@ package org.apache.solr.spelling;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.lucene.tests.util.LuceneTestCase.SuppressTempFileChecks;
@@ -99,7 +99,7 @@ public class FileBasedSpellCheckerTest extends SolrTestCaseJ4 {
               assertTrue("suggestions should be empty", suggestions.isEmpty());
 
               // Check empty token due to spellcheck.q = ""
-              spellOpts.tokens = Collections.singletonList(new Token("", 0, 0));
+              spellOpts.tokens = List.of(new Token("", 0, 0));
               result = checker.getSuggestions(spellOpts);
               assertNotNull("result shouldn't be null", result);
               suggestions = result.get(spellOpts.tokens.iterator().next());
