@@ -26,7 +26,6 @@ import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -35,6 +34,7 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import org.apache.lucene.tests.util.TestUtil;
 import org.apache.solr.client.solrj.RemoteSolrException;
@@ -102,7 +102,6 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
 
   private static CloudHttp2SolrClient httpJettyBasedCloudSolrClient = null;
   private static CloudHttp2SolrClient httpJdkBasedCloudSolrClient = null;
-  private static CloudHttp2SolrClient zkBasedCloudSolrClient = null;
   private static CloudHttp2SolrClient connectionStringZkBasedCloudSolrClient = null;
   private static CloudHttp2SolrClient connectionStringHttpBasedCloudSolrClient = null;
 
@@ -154,14 +153,6 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
                 .getHttpClient()
             instanceof HttpJdkSolrClient);
 
-    zkBasedCloudSolrClient =
-        new CloudSolrClient.Builder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
-            .build();
-    assertTrue(zkBasedCloudSolrClient.getHttpClient() instanceof HttpJettySolrClient);
-    assertTrue(
-        zkBasedCloudSolrClient.getClusterStateProvider() instanceof ZkClientClusterStateProvider);
-
     String zkConnString = cluster.getZkServer().getZkAddress();
     connectionStringZkBasedCloudSolrClient = new CloudSolrClient.Builder(zkConnString).build();
     assertTrue(
@@ -183,14 +174,12 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   public static void tearDownAfterClass() throws Exception {
     IOUtils.closeQuietly(httpJettyBasedCloudSolrClient);
     IOUtils.closeQuietly(httpJdkBasedCloudSolrClient);
-    IOUtils.closeQuietly(zkBasedCloudSolrClient);
     IOUtils.closeQuietly(connectionStringZkBasedCloudSolrClient);
     IOUtils.closeQuietly(connectionStringHttpBasedCloudSolrClient);
 
     shutdownCluster();
     httpJettyBasedCloudSolrClient = null;
     httpJdkBasedCloudSolrClient = null;
-    zkBasedCloudSolrClient = null;
     connectionStringZkBasedCloudSolrClient = null;
     connectionStringHttpBasedCloudSolrClient = null;
   }
@@ -198,7 +187,6 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   /** Randomly return the cluster's ZK based CSC, or HttpClusterProvider based CSC. */
   private CloudSolrClient getRandomClient() {
     CloudSolrClient[] clients = {
-      zkBasedCloudSolrClient,
       httpJettyBasedCloudSolrClient,
       httpJdkBasedCloudSolrClient,
       connectionStringZkBasedCloudSolrClient,
@@ -407,11 +395,11 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
       params.add("distrib", "false");
       QueryRequest queryRequest = new QueryRequest(params);
 
-      try (SolrClient solrClient = getHttpSolrClient(baseUrl, coreName)) {
-        QueryResponse queryResponse = queryRequest.process(solrClient);
-        SolrDocumentList docList = queryResponse.getResults();
-        assertEquals(1, docList.getNumFound());
-      }
+      SolrClient solrClient =
+          new CollectionScopedSolrClient(cluster.getJetty(baseUrl).getSolrClient(), coreName);
+      QueryResponse queryResponse = queryRequest.process(solrClient);
+      SolrDocumentList docList = queryResponse.getResults();
+      assertEquals(1, docList.getNumFound());
     }
 
     // Test the deleteById routing for UpdateRequest
@@ -432,7 +420,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     // Test Multi-Threaded routed updates for UpdateRequest
     try (CloudSolrClient threadedClient =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .sendUpdatesOnlyToShardLeaders()
             .withParallelUpdates(true)
             .withDefaultCollection("routing_collection")
@@ -456,11 +444,11 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
         params.add("q", "id:" + id);
         params.add("distrib", "false");
         QueryRequest queryRequest = new QueryRequest(params);
-        try (SolrClient solrClient = getHttpSolrClient(baseUrl, coreName)) {
-          QueryResponse queryResponse = queryRequest.process(solrClient);
-          SolrDocumentList docList = queryResponse.getResults();
-          assertEquals(1, docList.getNumFound());
-        }
+        SolrClient solrClient =
+            new CollectionScopedSolrClient(cluster.getJetty(baseUrl).getSolrClient(), coreName);
+        QueryResponse queryResponse = queryRequest.process(solrClient);
+        SolrDocumentList docList = queryResponse.getResults();
+        assertEquals(1, docList.getNumFound());
       }
     }
 
@@ -717,7 +705,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
 
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withDefaultCollection("foo")
             .build()) {
       // important to have one replica on each node
@@ -740,9 +728,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
           for (JettySolrRunner runner : cluster.getJettySolrRunners()) {
             Double numRequests =
                 SolrJMetricTestUtils.getNumNodeRequestErrors(
-                    runner.getBaseUrl().toString(),
-                    SolrRequest.SolrRequestType.ADMIN.name(),
-                    adminPath);
+                    runner, SolrRequest.SolrRequestType.ADMIN.name(), adminPath);
             errorsBefore += numRequests.longValue();
             if (log.isInfoEnabled()) {
               log.info(
@@ -766,9 +752,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
           for (JettySolrRunner runner : cluster.getJettySolrRunners()) {
             Double numRequests =
                 SolrJMetricTestUtils.getNumNodeRequestErrors(
-                    runner.getBaseUrl().toString(),
-                    SolrRequest.SolrRequestType.ADMIN.name(),
-                    adminPath);
+                    runner, SolrRequest.SolrRequestType.ADMIN.name(), adminPath);
             errorsAfter += numRequests.longValue();
             if (log.isInfoEnabled()) {
               log.info(
@@ -792,7 +776,7 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   public void checkCollectionParameters() throws Exception {
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withDefaultCollection("multicollection1")
             .build()) {
 
@@ -848,31 +832,33 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     SolrQuery q = new SolrQuery().setQuery("*:*");
     RemoteSolrException sse = null;
 
-    try (SolrClient solrClient = getHttpSolrClient(r.getBaseUrl(), COLLECTION)) {
+    // addressed by collection (not core) on purpose: that is what exercises _stateVer_
+    SolrClient solrClient =
+        new CollectionScopedSolrClient(cluster.getReplicaJetty(r).getSolrClient(), COLLECTION);
 
-      if (log.isInfoEnabled()) {
-        log.info("should work query, result {}", solrClient.query(q));
-      }
-      // no problem
-      q.setParam(CloudSolrClient.STATE_VERSION, COLLECTION + ":" + coll.getZNodeVersion());
-      if (log.isInfoEnabled()) {
-        log.info("2nd query , result {}", solrClient.query(q));
-      }
-      // no error yet good
-
-      q.setParam(
-          CloudSolrClient.STATE_VERSION,
-          COLLECTION + ":" + (coll.getZNodeVersion() - 1)); // an older version expect error
-
-      QueryResponse rsp = solrClient.query(q);
-      @SuppressWarnings({"rawtypes"})
-      Map m =
-          (Map) rsp.getResponse().get(CloudSolrClient.STATE_VERSION, rsp.getResponse().size() - 1);
-      assertNotNull(
-          "Expected an extra information from server with the list of invalid collection states",
-          m);
-      assertNotNull(m.get(COLLECTION));
+    if (log.isInfoEnabled()) {
+      log.info("should work query, result {}", solrClient.query(q));
     }
+    // no problem
+    q.setParam(CloudSolrClient.STATE_VERSION, COLLECTION + ":" + coll.getZNodeVersion());
+    if (log.isInfoEnabled()) {
+      log.info("2nd query , result {}", solrClient.query(q));
+    }
+    // no error yet good
+
+    q.setParam(
+        CloudSolrClient.STATE_VERSION,
+        COLLECTION + ":" + (coll.getZNodeVersion() - 1)); // an older version expect error
+
+    QueryResponse rsp = solrClient.query(q);
+    final NamedList<Object> response = rsp.getResponse();
+    final int stateVersionIdx =
+        response.indexOf(CloudSolrClient.STATE_VERSION, response.size() - 1);
+    @SuppressWarnings({"rawtypes"})
+    Map m = stateVersionIdx == -1 ? null : (Map) response.getVal(stateVersionIdx);
+    assertNotNull(
+        "Expected an extra information from server with the list of invalid collection states", m);
+    assertNotNull(m.get(COLLECTION));
 
     // now send the request to another node that does not serve the collection
 
@@ -894,31 +880,32 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     log.info("the node which does not serve this collection{} ", theNode);
     assertNotNull(theNode);
 
-    try (SolrClient solrClient = getHttpSolrClient(theNode, COLLECTION)) {
+    // this node has no replica of the collection, so it is addressed by node rather than replica
+    SolrClient otherNodeClient =
+        new CollectionScopedSolrClient(cluster.getJetty(theNode).getSolrClient(), COLLECTION);
 
-      q.setParam(CloudSolrClient.STATE_VERSION, COLLECTION + ":" + (coll.getZNodeVersion() - 1));
-      try {
-        QueryResponse rsp = solrClient.query(q);
-        log.info("error was expected");
-      } catch (RemoteSolrException e) {
-        sse = e;
-      }
-      assertNotNull(sse);
-      assertEquals(
-          " Error code should be 510", SolrException.ErrorCode.INVALID_STATE.code, sse.code());
+    q.setParam(CloudSolrClient.STATE_VERSION, COLLECTION + ":" + (coll.getZNodeVersion() - 1));
+    try {
+      otherNodeClient.query(q);
+      log.info("error was expected");
+    } catch (RemoteSolrException e) {
+      sse = e;
     }
+    assertNotNull(sse);
+    assertEquals(
+        " Error code should be 510", SolrException.ErrorCode.INVALID_STATE.code, sse.code());
   }
 
   @Test
   public void testShutdown() throws IOException {
     try (CloudSolrClient client =
-        new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(DEAD_HOST_1), Optional.empty())
-            .build()) {
+        new RandomizingCloudSolrClientBuilder(List.of(DEAD_HOST_1), Optional.empty()).build()) {
       try (ZkClientClusterStateProvider zkClientClusterStateProvider =
           ZkClientClusterStateProvider.from(client)) {
         zkClientClusterStateProvider.setZkConnectTimeout(100);
-        SolrException e = assertThrows(SolrException.class, client::connect);
+        SolrException e =
+            assertThrows(
+                SolrException.class, () -> client.getClusterStateProvider().getLiveNodes());
         assertTrue(e.getCause() instanceof TimeoutException);
       }
     }
@@ -928,13 +915,14 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   public void testWrongZkChrootTest() throws IOException {
     try (CloudSolrClient client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress() + "/xyz/foo"),
-                Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress() + "/xyz/foo"), Optional.empty())
             .build()) {
       try (ZkClientClusterStateProvider zkClientClusterStateProvider =
           ZkClientClusterStateProvider.from(client)) {
         zkClientClusterStateProvider.setZkClientTimeout(1000 * 60);
-        SolrException e = assertThrows(SolrException.class, client::connect);
+        SolrException e =
+            assertThrows(
+                SolrException.class, () -> client.getClusterStateProvider().getLiveNodes());
         assertTrue(e.getMessage().contains("cluster not found/not ready"));
         assertTrue(
             e.getMessage()
@@ -946,11 +934,10 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
   @Test
   public void customHttpClientTest() throws Exception {
     String baseUrl = cluster.getJettySolrRunners().get(0).getBaseUrl().toString();
-    try (HttpJettySolrClient httpClient = new HttpJettySolrClient.Builder(baseUrl).build()) {
+    try (HttpJettySolrClient httpClient =
+        cluster.getJettySolrRunners().get(0).newSolrClient(null)) {
       try (CloudSolrClient cloudClient =
-          new CloudJettySolrClient.Builder(Collections.singletonList(baseUrl))
-              .withHttpClient(httpClient)
-              .build()) {
+          new CloudJettySolrClient.Builder(List.of(baseUrl)).withHttpClient(httpClient).build()) {
         // Verify the CloudJettySolrClient uses the provided HttpJettySolrClient
         assertSame(((CloudJettySolrClient) cloudClient).getHttpClient(), httpClient);
       }
@@ -1064,12 +1051,12 @@ public class CloudHttp2SolrClientTest extends SolrCloudTestCase {
     // NOTE: creating our own CloudSolrClient whose settings we can muck with...
     try (CloudSolrClient stale_client =
         new RandomizingCloudSolrClientBuilder(
-                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+                List.of(cluster.getZkServer().getZkAddress()), Optional.empty())
             .withParallelUpdates(true)
             .sendDirectUpdatesToAnyShardReplica()
             .withDefaultCollection(COL)
             // don't let collection cache entries get expired, even on a slow machine...
-            .withCollectionCacheTtl(Integer.MAX_VALUE)
+            .withCollectionCacheTtl(1, TimeUnit.DAYS)
             .build()) {
 
       // do a query to populate stale_client's cache...
